@@ -1,3 +1,14 @@
+2011-01-20  Alexander Pavlov  <apavlov@chromium.org>
+
+        Reviewed by Pavel Feldman.
+
+        Web Inspector: Crash when adding a rule for an ImageDocument
+        https://bugs.webkit.org/show_bug.cgi?id=52811
+
+        * inspector/InspectorCSSAgent.cpp:
+        (WebCore::InspectorCSSAgent::addRule2):
+        (WebCore::InspectorCSSAgent::viaInspectorStyleSheet):
+
 2011-01-20  Ilya Tikhonovsky  <loislo@chromium.org>
 
         Reviewed by Pavel Feldman.
